--- a/menu.html
+++ b/menu.html
@@ -15,12 +15,12 @@
 
 </head>
 
-<body>
+<body style="background-color: rgb(12, 12, 1);">
   <div class="container-fluid container-expand-lg bg-dark fixed-top ">
     <div class="d-flex">
       <ul class="nav">
         <li class="nav-item bg">
-          <a href="#" class="nav-link">
+          <a href="Eatritemultiventures2011@gmail.com" class="nav-link">
             <img src="images/download__2_-removebg-preview.png" class="img-fluid d-in-line-block" width="30"
               height="25">Eatritemultiventures2011</a>
         </li>
@@ -61,8 +61,7 @@
             </a>
           </li>
           <li class="nav-item dropdown">
-            <a href="menu.html" class=" nav-link" data-bs-toggle="dropdown" data-bs-toggle="pill"
-              aria-expanded="false">
+            <a href="menu.html" class=" nav-link" data-bs-toggle="dropdown" data-bs-toggle="pill" aria-expanded="false">
               <h5>Menu</h5>
             </a>
             <ul class="dropdown-menu dropdown-menu-dark">
@@ -73,7 +72,7 @@
               <li><a class="dropdown-item" href="menu.html#meal5">Protein Wraps</a></li>
             </ul>
           </li>
-  <li class="nav-item dropdown">
+          <li class="nav-item dropdown">
             <a href="service.html" class=" nav-link" data-bs-toggle="dropdown" data-bs-toggle="pill"
               aria-expanded="false">
               <h5>Service</h5>
@@ -147,44 +146,49 @@
               </div>
             </div>
           </div>
-          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="images/spag.png" class="d-block" width="100" height="150" title="Hot Spagheti">
-      <div class="carousel-caption d-none d-md-block">
-        <h5 class="text-dark">Hot Spagheti</h5>
-        <p class="text-danger fw-bold">Just N1,500</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="images/samosa.jpeg" class="d-block" width="100" height="150" title="Fresh Hot Samosa">
-      <div class="carousel-caption d-none d-md-block">
-        <h5 class="text-dark">Fresh Hot Samosa</h5>
-        <p class="text-danger fw-bold">All for N3,000 only</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="images/meatpie.jpeg" class="d-block" width="100" height="150" title="Hot Chicken Pie">
-      <div class="carousel-caption d-none d-md-block">
-        <h5 class="text-dark">Hot Chiken Pie</h5>
-        <p class="text-danger fw-bold">N1,000 Only</p>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
+          <div id="carouselE" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselE" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselE" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselE" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="images/spag.png" class="d-block" title="Hot Spagheti">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5 class="text-dark">Hot Spagheti</h5>
+                  <p class="text-danger fw-bold">Just N1,500</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="images/samosa.jpeg" class="d-block" title="Fresh Hot Samosa">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5 class="text-dark">Fresh Hot Samosa</h5>
+                  <p class="text-danger fw-bold">All for N3,000 only</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="images/meatpie.jpeg" class="d-block" title="Hot Chicken Pie">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5 class="text-dark">Hot Chiken Pie</h5>
+                  <p class="text-danger fw-bold">N1,000 Only</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselE"
+              data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselE"
+              data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
       </div>
     </div>
