--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html#menu">
+            <a class="nav-link" href="menu.html">
               <h5>Menu</h5>
             </a>
           </li>
@@ -260,10 +260,10 @@
   </section>
   <!-- about us section -->
   <section id="about" class="bg-warning">
-    <div class="container-fluid px-5 pt-2">
+    <div class="container-fluid px-5 pt-2 my-4">
       <div class="row align-items-center justify-content-between">
         <div class="col-md text-justify">
-          <h2 class="bg-danger text-light px-3">EATRITE, To Stay Healthy !</h2>
+          <h2 class="bg-danger text-light px-3">ABOUT US - Eatrite, To Stay Healthy !</h2>
 
           <p>A vibrant new addition to the local food scene, <span class="lead fw-bold">eatrite</span> has officially
             opened its doors, promising a delicious blend of wholesome meals and modern flair. <br> <br> Located in the
