--- a/menu.html
+++ b/menu.html
@@ -118,9 +118,9 @@
 
 
   <section id="meal">
-    <div class="container-fluid py-2">
+    <div class="container py-2">
       <h3 class="text-warning text-center bg-dark p-3" id="serve"><a href="#">REFUEL MEALS</a></h3>
-      <div class="container">
+      <div class="container my-3">
         <div class="row row-cols-2 row-cols-md-4 g-2">
           <div class="col">
             <div class="card">
@@ -195,10 +195,10 @@
   </section>
 
   <section id="meal2">
-    <div class="container-fluid">
+    <div class="container">
       <h3 class="text-dark text-center bg-light p-3" id="serve2"><a href="#">SWALLOWS</a></h3>
     </div>
-    <div class="container">
+    <div class="container my-3">
       <div class="row row-cols-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card">
@@ -229,10 +229,10 @@
   </section>
 
   <section id="meal3">
-    <div class="container-fluid">
-      <h3 class="text-dark text-center bg-primary p-3" id="serve3"><a href="#">RICE</a></h3>
-    </div>
     <div class="container">
+      <h3 class="text-warning text-center bg-dark p-3" id="serve"><a href="#">RICE</a></h3>
+    </div>
+    <div class="container my-3">
       <div class="row row-cols-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card">
@@ -263,9 +263,9 @@
   </section>
 
   <section id="meal4">
-    <div class="container-fluid">
-      <h3 class="text-warning text-center bg-dark p-3" id="serve"><a href="#">CAKES & CREAM</a></h3>
-      <div class="container">
+    <div class="container">
+      <h3 class="text-dark text-center bg-light p-3" id="serve2"><a href="#">CAKES & CREAM</a></h3>
+      <div class="container my-3">
         <div class="row row-cols-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card">
@@ -296,10 +296,10 @@
   </section>
 
   <section id="meal5">
-    <div class="container-fluid">
-      <h3 class="text-dark text-center bg-light p-3" id="serve2"><a href="#">PROTEIN WRAPS</a></h3>
-    </div>
     <div class="container">
+      <h3 class="text-warning text-center bg-dark p-3" id="serve"><a href="#">PROTEIN WRAPS</a></h3>
+    </div>
+    <div class="container my-3">
       <div class="row row-cols-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card">
