--- a/service.html
+++ b/service.html
@@ -271,7 +271,7 @@
   <!-- OUR CUSTOMER -->
   <section id="customer" class="bg-warning py-3">
     <div class="container">
-      <h2 class="text-center text-primary">OUR CUSTOMER</h2>
+      <h2 class="text-center text-primary">OUR REVIEWS</h2>
       <div class="row row-cols-2 row-cols-md-4">
         <div class="col-sm-6 col-md-3 g-3">
           <div class="card">
@@ -279,7 +279,7 @@
               <img src="images/mama.jpg" alt="" class="rounded-circle img-fluid">
               <div class="card-title">
                 <h6 class="text-center text-dark fw-bolder lead">Mrs Ramsey</h6>
-                <p class="fw-bold text-light">As a customer, I love this eatery’s service — friendly staff, quick service, and
+                <p class="fw-bold text-light">I love this eatery’s service — friendly staff, quick service, and
                   consistently delicious
                   food. Whether it's local dishes or international flavors, every meal feels fresh and satisfying.
                 </p>
@@ -317,7 +317,7 @@
               <img src="images/sis.jpg" alt="" class="rounded-circle img-fluid">
               <div class="card-title">
                 <h6 class="text-center text-dark fw-bolder lead">Miss Sonia</h6>
-                <p class="fw-bold text-light">As a customer, I’m always impressed by the service here. The staff are friendly and
+                <p class="fw-bold text-light">I’m always impressed by the service here. The staff are friendly and
                   efficient, the food is served quickly, and the overall experience is consistently pleasant and
                   enjoyable.
                 </p>
