--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li class="nav-item bg">
           <a href="Eatritemultiventures2011@gmail.com" class="nav-link">
             <img src="images/download__2_-removebg-preview.png" class="img-fluid d-in-line-block" width="30"
-              height="25">Eatritemultiventures2011</a>
+              height="25">Eatriteventures</a>
         </li>
         <li class="nav-item text-light pt-2">
           <img src="images/download.png" class="img-thumbnail d-in-line-block" width="20" height="25">+234-7038187084
@@ -104,10 +104,7 @@
     <div class="card bg-dark text-white">
       <img src="images/bur.jpg" class="card-img" alt="...">
       <div class="card-img-overlay">
-        <!-- <h5 class="card-title text-light lead text-center">Eatrite to stay healthy</h5> -->
-        <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
-        <!-- <p class="card-text">Last updated 3 mins ago</p> -->
-      </div>
+        </div>
     </div>
   </section>
 
