--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,7 @@
         <li class="nav-item bg">
           <a href="Eatritemultiventures2011@gmail.com" class="nav-link">
             <img src="images/download__2_-removebg-preview.png" class="img-fluid d-in-line-block" width="30"
-              height="25">Eatritemultiventures2011</a>
+              height="25">Eatriteventures</a>
         </li>
         <li class="nav-item text-light pt-2">
           <img src="images/download.png" class="img-thumbnail d-in-line-block" width="20" height="25">+234-7038187084
