--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               height="25">Eatriteventures</a>
         </li>
         <li class="nav-item text-light pt-2">
-          <img src="images/download.png" class="img-thumbnail d-in-line-block" width="20" height="25">+234-7038187084
+          <img src="images/download.png" class="img-thumbnail d-in-line-block" width="20" height="25">07038187084
         </li>
         <li class="nav-item">
           <a href="https://www.facebook.com/share/1Axbt2heE3/" class="nav-link">
@@ -368,8 +368,8 @@
 
           <ul class="list-group list-group-flush lead">
             <li class="list-group-item"><span class="fw-bold">Shop Location:</span> Obaile, Akure, Nigeria</li>
-            <li class="list-group-item"><span class="fw-bold">Contact Phone:</span> +234-7038187084</li>
-            <li class="list-group-item"><span class="fw-bold">Contact Email:</span> Eatritemultiventures2011@gmail.com</li>
+            <li class="list-group-item"><span class="fw-bold">Contact Phone:</span> 07038187084</li>
+            <li class="list-group-item"><span class="fw-bold">Contact Email:</span> Eatriteventures</li>
           </ul>
         </div>
         <div class="col-md text-center">
