--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
               height="25">Eatriteventures</a>
         </li>
         <li class="nav-item text-light pt-2">
-          <img src="images/download.png" class="img-thumbnail d-in-line-block" width="20" height="25">+234-7038187084
+          <img src="images/download.png" class="img-thumbnail d-in-line-block" width="20" height="25">07038187084
         </li>
         <li class="nav-item">
           <a href="https://www.facebook.com/share/1Axbt2heE3/" class="nav-link">
