--- a/menu.html
+++ b/menu.html
@@ -19,13 +19,13 @@
   <div class="container-fluid container-expand-lg bg-dark fixed-top ">
     <div class="d-flex">
       <ul class="nav">
+        <li class="nav-item text-light pt-2">
+          <img src="images/download.png" class="img-thumbnail d-in-line-block" width="20" height="25">+234-7038187084
+        </li>
         <li class="nav-item bg">
           <a href="Eatritemultiventures2011@gmail.com" class="nav-link">
             <img src="images/download__2_-removebg-preview.png" class="img-fluid d-in-line-block" width="30"
-              height="25">Eatriteventures</a>
-        </li>
-        <li class="nav-item text-light pt-2">
-          <img src="images/download.png" class="img-thumbnail d-in-line-block" width="20" height="25">07038187084
+              height="25"></a>
         </li>
         <li class="nav-item">
           <a href="https://www.facebook.com/share/1Axbt2heE3/" class="nav-link">
