--- a/service.html
+++ b/service.html
@@ -19,13 +19,14 @@
   <div class="container-fluid container-expand-lg bg-dark fixed-top ">
     <div class="d-flex">
       <ul class="nav">
+         <li class="nav-item text-light pt-2">
+          <img src="images/download.png" class="img-thumbnail d-in-line-block" width="20" height="25">+234-7038187084
+        </li>
+
         <li class="nav-item bg">
           <a href="Eatritemultiventures2011@gmail.com" class="nav-link">
             <img src="images/download__2_-removebg-preview.png" class="img-fluid d-in-line-block" width="30"
-              height="25">Eatriteventures</a>
-        </li>
-        <li class="nav-item text-light pt-2">
-          <img src="images/download.png" class="img-thumbnail d-in-line-block" width="20" height="25">07038187084
+              height="25"></a>
         </li>
         <li class="nav-item">
           <a href="https://www.facebook.com/share/1Axbt2heE3/" class="nav-link">
@@ -33,6 +34,7 @@
               width="30" height="25">
           </a>
         </li>
+        
         <li class="d-none d-md-flex bg-danger text-light fw-bold text-center">
           <i class="bi bi-car-front img-thumbnail bg-dark">ONLINE ORDER</i>
           <p class="px-2">7am - 7pm</p>
@@ -145,7 +147,8 @@
         </div>
         <div class="col">
           <img src="images/cuisineart.png" alt="" class="rounded-circle img-fluid mt-3">
-          <h5 class="lead fw-bold text-primary mt-2">All kinds of Cuisine <br> <span class="text-warning">Local and International</span></h5>
+          <h5 class="lead fw-bold text-primary mt-2">All kinds of Cuisine <br> <span class="text-warning">Local and
+              International</span></h5>
           <p>Experience a diverse cuisine service offering both local and international dishes. From traditional
             favorites to global specialties, enjoy expertly prepared meals tailored to your taste, delivered fresh and
             fast.
@@ -221,10 +224,10 @@
               Do I need to make a reservation, or do you accept walk-ins?
             </button>
           </h2>
-         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+          <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
             aria-labelledby="panelsStayOpen-headingThree">
             <div class="accordion-body">
-               <strong>We welcome both reservations and walk-ins! However, for larger groups or peak hours, we recommend
+              <strong>We welcome both reservations and walk-ins! However, for larger groups or peak hours, we recommend
                 booking in advance to ensure availability.
 
             </div>
@@ -354,7 +357,7 @@
     </div>
   </section>
 
-   <!-- contact us section -->
+  <!-- contact us section -->
   <section id="contact" class="p-0">
     <div class="container-fluid bg-light p-5">
       <div class="row align-items-center justify-content-between" id="contact">
