--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 </head>
 
 <body>
-  <div class="container-fluid container-expand-lg bg-dark fixed-top" data-bs-theme="dark">
+  <nav class="container-fluid container-expand-lg bg-warning fixed-top">
+    <div class="container">
     <div class="d-flex">
       <ul class="nav">
         <li class="nav-item text-light pt-2">
-          <img src="images/download.png" class="img-thumbnail d-in-line-block" width="20" height="25">+234-7038187084
+          <img src="images/download.png" class="img-thumbnail d-in-line-block" width="20" height="25"><span class="text-dark fw-bold">+234-7038187084</span>
         </li>
         <li class="nav-item bg">
           <a href="Eatritemultiventures2011@gmail.com" class="nav-link">
@@ -39,10 +40,11 @@
       </ul>
     </div>
   </div>
+  </nav>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-warning text-white pt-5 sticky-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white pt-5 sticky-top">
     <div class="container">
-      <a href="#" class="navbar-brand d-flex text-light px-5">
+      <a href="#" class="navbar-brand d-flex text-white px-5">
         <img src="images/eat_rite_logo-removebg-preview.png" alt="logo" width="50" height="35" class="d-inline-block">
         <h4 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-weight: bolder;">EATRITE
         </h4>
@@ -75,6 +77,7 @@
               <li><a class="dropdown-item" href="service.html#ourservice">Local & International Cuisine</a></li>
               <li><a class="dropdown-item" href="service.html#question">Frequently Asked Questions</a></li>
               <li><a class="dropdown-item" href="index.html#about">About Us</a></li>
+              <li><a class="dropdown-item" href="service.html#customer">Our Reviews</a></li>
             </ul>
           </li>
 
@@ -368,13 +371,13 @@
 
           <ul class="list-group list-group-flush lead">
             <li class="list-group-item"><span class="fw-bold">Shop Location:</span> Obaile, Akure, Nigeria</li>
-            <li class="list-group-item"><span class="fw-bold">Contact Phone:</span> 07038187084</li>
-            <li class="list-group-item"><span class="fw-bold">Contact Email:</span> Eatriteventures</li>
+            <li class="list-group-item"><span class="fw-bold">Contact Phone:</span> +234-7038187084</li>
+            <li class="list-group-item"><span class="fw-bold">Contact Email:</span> <a href="mailto:eatritemultiventures2011@gmail.com" id="mail" class="fw-bold">Send A Mail</a></li>
           </ul>
         </div>
         <div class="col-md text-center">
           <img src="images/contact us.jpeg" alt="" class="img-fluid w-50">
-        </div>
+        </div> 
       </div>
     </div>
 
