--- a/menu.html
+++ b/menu.html
@@ -16,11 +16,12 @@
 </head>
 
 <body style="background-color: rgb(12, 12, 1);">
-  <div class="container-fluid container-expand-lg bg-dark fixed-top ">
+  <nav class="container-fluid container-expand-lg bg-warning fixed-top">
+    <div class="container">
     <div class="d-flex">
       <ul class="nav">
         <li class="nav-item text-light pt-2">
-          <img src="images/download.png" class="img-thumbnail d-in-line-block" width="20" height="25">+234-7038187084
+          <img src="images/download.png" class="img-thumbnail d-in-line-block" width="20" height="25"><span class="text-dark fw-bold">+234-7038187084</span>
         </li>
         <li class="nav-item bg">
           <a href="Eatritemultiventures2011@gmail.com" class="nav-link">
@@ -40,8 +41,10 @@
       </ul>
     </div>
   </div>
+  </nav>
+  
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-warning text-white pt-5 sticky-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white pt-5 sticky-top">
     <div class="container naimg">
       <a href="#" class="navbar-brand d-flex text-light px-5">
         <img src="images/eat_rite_logo-removebg-preview.png" alt="logo" width="50" height="35" class="d-inline-block">
@@ -82,6 +85,7 @@
               <li><a class="dropdown-item" href="service.html#ourservice">Local & International Cuisine</a></li>
               <li><a class="dropdown-item" href="service.html#question">Frequently Asked Questions</a></li>
               <li><a class="dropdown-item" href="index.html#about">About Us</a></li>
+              <li><a class="dropdown-item" href="service.html#customer">Our Reviews</a></li>
             </ul>
 
           </li>
