--- a/service.html
+++ b/service.html
@@ -16,13 +16,13 @@
 </head>
 
 <body>
-  <div class="container-fluid container-expand-lg bg-dark fixed-top ">
+  <nav class="container-fluid container-expand-lg bg-warning fixed-top">
+    <div class="container">
     <div class="d-flex">
       <ul class="nav">
-         <li class="nav-item text-light pt-2">
-          <img src="images/download.png" class="img-thumbnail d-in-line-block" width="20" height="25">+234-7038187084
+        <li class="nav-item text-light pt-2">
+          <img src="images/download.png" class="img-thumbnail d-in-line-block" width="20" height="25"><span class="text-dark fw-bold">+234-7038187084</span>
         </li>
-
         <li class="nav-item bg">
           <a href="Eatritemultiventures2011@gmail.com" class="nav-link">
             <img src="images/download__2_-removebg-preview.png" class="img-fluid d-in-line-block" width="30"
@@ -34,7 +34,6 @@
               width="30" height="25">
           </a>
         </li>
-        
         <li class="d-none d-md-flex bg-danger text-light fw-bold text-center">
           <i class="bi bi-car-front img-thumbnail bg-dark">ONLINE ORDER</i>
           <p class="px-2">7am - 7pm</p>
@@ -42,8 +41,9 @@
       </ul>
     </div>
   </div>
+  </nav>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-warning text-white pt-5 sticky-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white pt-5 sticky-top">
     <div class="container naimg">
       <a href="#" class="navbar-brand d-flex text-light px-5">
         <img src="images/eat_rite_logo-removebg-preview.png" alt="logo" width="50" height="35" class="d-inline-block">
@@ -77,7 +77,7 @@
               <li><a class="dropdown-item" href="service.html#ourservice">Local & International Cuisine</a></li>
               <li><a class="dropdown-item" href="service.html#question">Frequently Asked Questions</a></li>
               <li><a class="dropdown-item" href="index.html#about">About Us</a></li>
-              <li><a class="dropdown-item" href="service.html#customer">Our Customer</a></li>
+              <li><a class="dropdown-item" href="service.html#customer">Our Reviews</a></li>
             </ul>
           </li>
 
@@ -114,7 +114,7 @@
 
   <section class="bg-dark" id="ourservice">
     <div class="container text-center text-light">
-      <h2 class="text-primary p-3">OUR SERVICES</h2>
+      <h2 class="text-warning p-3">OUR SERVICES</h2>
       <div class="row row-cols-1 row-cols-md-3 text-center p-2">
         <div class="col p-2">
           <img src="images/bike.png" alt="" class="rounded-circle img-fluid">
@@ -367,7 +367,7 @@
           <ul class="list-group list-group-flush lead">
             <li class="list-group-item"><span class="fw-bold">Shop Location:</span> Obaile, Akure, Nigeria</li>
             <li class="list-group-item"><span class="fw-bold">Contact Phone:</span> 07038187084</li>
-            <li class="list-group-item"><span class="fw-bold">Contact Email:</span> Eatriteventures</li>
+            <li class="list-group-item"><span class="fw-bold">Contact Email:</span> <a href="mailto:eatritemultiventures2011@gmail.com" id="mail" class="fw-bold">Send A Mail</a></li>
           </ul>
         </div>
         <div class="col-md text-center">
