--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white pt-5 sticky-top">
     <div class="container">
       <a href="#" class="navbar-brand d-flex text-white px-5">
-        <img src="images/eat_rite_logo-removebg-preview.png" alt="logo" width="50" height="35" class="d-inline-block">
-        <h4 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-weight: bolder;">EATRITE
+        <img src="images/eat_rite_logo-removebg-preview.png" alt="logo" width="50" height="35" class="d-inline-block mt-1">
+        <h4 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-weight: bolder;" class="mt-2 mx-2">EATRITE
         </h4>
       </a>
 
