--- a/service.html
+++ b/service.html
@@ -317,26 +317,6 @@
 
         <div class="col-sm-6 col-md-3 g-3">
           <div class="card">
-            <div class="card-body bg-primary text-center">
-              <img src="images/sis.jpg" alt="" class="rounded-circle img-fluid">
-              <div class="card-title">
-                <h6 class="text-center text-dark fw-bolder lead">Miss Sonia</h6>
-                <p class="fw-bold text-light">I’m always impressed by the service here. The staff are friendly and
-                  efficient, the food is served quickly, and the overall experience is consistently pleasant and
-                  enjoyable.
-                </p>
-              </div>
-              <a href="#" class="bi bi-facebook text-dark mx-1"></a>
-              <a href="#" class="bi bi-twitter text-dark mx-1"></a>
-              <a href="#" class="bi bi-instagram text-dark mx-1"></a>
-              <a href="#" class="bi bi-linkedin text-dark mx-1"></a>
-
-
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 g-3">
-          <div class="card">
             <div class="card-body text-center">
               <img src="images/bro.jpg" alt="" class="rounded-circle img-fluid">
               <div class="card-title">
@@ -354,6 +334,28 @@
             </div>
           </div>
         </div>
+
+        <div class="col-sm-6 col-md-3 g-3">
+          <div class="card">
+            <div class="card-body bg-primary text-center">
+              <img src="images/NN GOLD.jpg" alt="" class="rounded-circle img-fluid">
+              <div class="card-title">
+                <h6 class="text-center text-dark fw-bolder lead">Mrs ObiomaGold</h6>
+                <p class="fw-bold text-light">I’m always impressed by the service here. The staff are friendly and
+                  efficient, the food is served quickly, and the overall experience is consistently pleasant and
+                  enjoyable.
+                </p>
+              </div>
+              <a href="#" class="bi bi-facebook text-dark mx-1"></a>
+              <a href="#" class="bi bi-twitter text-dark mx-1"></a>
+              <a href="#" class="bi bi-instagram text-dark mx-1"></a>
+              <a href="#" class="bi bi-linkedin text-dark mx-1"></a>
+
+
+            </div>
+          </div>
+        </div>
+        
       </div>
     </div>
   </section>
